# Weather-Station-Tutorial

./: .gitignore  README.md
step0/: README.md  mix.exs
step0/config/: config.exs  runtime.exs
step0/lib/: manifest.ex
step1/: .gitignore  README.md  mix.exs
step1/config/: config.exs
step1/lib/: manifest.ex
step2/: README.md  mix.exs
step2/config/: config.exs
step2/lib/: manifest.ex
step2/wx_sensor/: CMakeLists.txt  CMakeLists.txt.1  CMakeLists.txt.2  mix.exs
step2/wx_sensor/lib/: wx_sensor_manifest.ex
step2/wx_sensor/src/: main.c
step3/: README.md
step3/config/: config.exs
step3/drivers/bme280/: bme280_defs.h
step3/lib/: manifest.ex
step3/wx_sensor/: CMakeLists.txt  CMakeLists.txt.bak  README.md
step3/wx_sensor/lib/: wx_sensor_manifest.ex
step3/wx_sensor/src/: main.c  main.c.bak
